--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -2,16 +2,16 @@
   <div class="container flex flex-col flex-wrap px-5 py-24 mx-auto md:items-center lg:items-start md:flex-row md:flex-nowrap">
     <div class="flex-shrink-0 w-64 mx-auto text-center md:mx-0 md:text-left">
       <a href="/" class="flex items-center justify-center font-medium text-content md:justify-start">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-content-inverted bg-interaction rounded-full" viewBox="0 0 24 24">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 rounded-full text-content-inverted bg-interaction" viewBox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
         <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
       </a>
-      <p class="mt-2 text-sm">{{ 'app.footer.description' | t }}</p>
+      <p class="mt-6 text-sm">{{ 'app.footer.description' | t }}</p>
     </div>
 
     <div class="flex flex-wrap flex-grow mt-10 -mb-10 text-center md:pl-20 md:mt-0 md:text-left">
-      <div class="w-full px-4 lg:w-1/4 md:w-1/2">
+      <div class="w-full px-4 lg:w-1/3 md:w-1/2">
         <h2 class="mb-3 text-sm font-medium tracking-widest">{{ 'app.footer.header.title.general' | t }}</h2>
         <ul class="mb-10 leading-loose list-none">
           <li>
@@ -25,7 +25,7 @@
           </li>
         </ul>
       </div>
-      <div class="w-full px-4 lg:w-1/4 md:w-1/2">
+      <div class="w-full px-4 lg:w-1/3 md:w-1/2">
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.join' | t }}</h2>
         <ul class="mb-10 leading-loose list-none">
           <li>
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </div>
-      <div class="w-full px-4 lg:w-1/4 md:w-1/2">
+      <div class="w-full px-4 lg:w-1/3 md:w-1/2">
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.support' | t }}</h2>
         <ul class="mb-10 leading-loose list-none">
           <li>
@@ -52,13 +52,13 @@
 
   <div class="container flex flex-col flex-wrap px-5 py-4 mx-auto sm:flex-row">
     <p class="text-sm text-center sm:text-left">{{ 'app.footer.copyrights.year' | t }} {{ 'app.footer.copyrights.title' | t }}
-      <a href="https://www.platformos.com" rel="noopener noreferrer" class="ml-1" target="_blank">{{ 'app.footer.copyrights.product_owner' | t }}</a>
+      <a href="https://www.platformos.com" target="_blank" rel="noopener external noreferrer" class="ml-1" target="_blank">{{ 'app.footer.copyrights.product_owner' | t }}</a>
     </p>
     <div class="inline-flex justify-center mt-2 sm:ml-auto sm:mt-0 sm:justify-start">
       <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
         <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
       </svg>
-      <a class="ml-3" href="https://twitter.com/platformos">
+      <a class="ml-3" target="_blank" rel="noopener external noreferrer" href="https://twitter.com/platformos">
         <span class="sr-only">platformOS Twitter</span>
         <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
           <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
