--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -1,5 +1,5 @@
   <div class="mb-2 w-full md:w-full">
-    <h1 class="text-2xl">{{ 'app.stripe.header' | t }}</h1>
+    <h1 class="title">{{ 'app.stripe.header' | t }}</h1>
     <ul class="leading-10 list-decimal list-inside">
       <li>
         {{ 'app.stripe.register' | t }}
@@ -34,7 +34,7 @@
   </br>
 
   <div class="mb-2 w-full md:w-full">
-    <h1 class="text-2xl">Chat</h1>
+    <h1 class="title">{{ 'app.chat.setup.title' | t }}</h1>
   </div>
 
   <div class="w-full p-6 mt-8 mb-2 bg-gray-200 rounded lg:w-4/6 md:w-3/4">
