--- a/app/views/partials/theme/simple/marketplace_setup/index.liquid
+++ b/app/views/partials/theme/simple/marketplace_setup/index.liquid
@@ -60,7 +60,7 @@
       <input type="hidden" name="name" value="slack"></input>
       <input type="text" name="value" value=""></input>
       <input type="submit" class="ml-3 button button" value="submit" class="mt-3 button"></br>
-      <label class="block mt-4"><b>{{ 'app.slack.setup.title' | t }}</b></br> {% if context.constants.SLACK_WEBHOOK_URL == blank %}{{ 'app.slack.setup.none' | t }}{% else %}{{ context.constants.SLACK_WEBHOOK_URL }}{% endif %}</label>
+      <label class="block mt-4"><b>{{ 'app.slack.setup.webhook' | t }}</b></br> {% if context.constants.SLACK_WEBHOOK_URL == blank %}{{ 'app.slack.setup.none' | t }}{% else %}{{ context.constants.SLACK_WEBHOOK_URL }}{% endif %}</label>
       </label>
     </form>
   </div>
