--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -7,7 +7,7 @@
     {% include 'lib/flash/display' %}
     {% if context.location.pathname contains '/dashboard' %}
       <div class="flex flex-col md:flex-row">
-        {% include 'theme/simple/dashboard/sidebar' %}
+        {% include 'theme/simple/dashboard/sidebar', profile: current_profile %}
         <div class="flex-1 md:ml-10">
           {{content_for_layout}}
         </div>
