--- a/app/views/pages/marketplace_setup/constants/set.liquid
+++ b/app/views/pages/marketplace_setup/constants/set.liquid
@@ -3,7 +3,7 @@ method: post
 ---
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id
-  include 'lib/must_be_superadmin'
+  include 'lib/must_be_superadmin', profile: current_profile
   function object = 'lib/commands/constants/set', name: context.params.name, value: context.params.value
 
   if object.valid
